buildscript {
    repositories {
        maven { url = "https://maven.minecraftforge.net" }
        maven { url = "https://maven.parchmentmc.org" }
        maven { url = 'https://repo.spongepowered.org/maven' }
        mavenCentral()
    }
    dependencies {
        classpath(group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true)
                { exclude group: 'org.apache.logging.log4j' }
        classpath 'org.apache.logging.log4j:log4j-api:2.11.2'
        classpath 'org.apache.logging.log4j:log4j-core:2.11.2'
        classpath 'org.parchmentmc:librarian:1.+'
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'maven-publish'
apply plugin: 'org.parchmentmc.librarian.forgegradle'
apply plugin: 'org.spongepowered.mixin'

archivesBaseName = 'ttm'
version = "0.1.3"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {
    mappings channel: 'parchment', version: '2022.08.21-1.18.2'

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        client {

            workingDirectory project.file('run')


            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"


            mods {
                tothemoon {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"


            mods {
                tothemoon {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            property 'mixin.env.remapRefMap', 'true'
            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"

            args '--mod', 'tothemoon',
                    '--all',
                    '--output', file('src/generated/resources/'),
                    '--existing', file('src/main/resources/')

            mods {
                tothemoon {
                    source sourceSets.main
                }
            }
        }
    }
}

tasks.withType(JavaCompile) {
    options.forkOptions.jvmArgs += '-Xmx2G -Xms512m -XX:+HeapDumpOnOutOfMemoryError -Dmixin.debug=true -Dmixin.debug.export=true'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        url = "https://www.cursemaven.com/"
    }

    maven {
        // location of the maven that hosts JEI files
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }

    maven {
        url = "https://maven.blamejared.com"
    }

    maven {
        name = 'MelanX Maven'
        url = 'https://maven.melanx.de/'
    }

    maven {
        url = "https://maven.zerono.it/"
    }
}

mixin {
    add sourceSets.main, 'ttm.mixin-refmap.json'
    config 'ttm.mixin.json'

}


dependencies {
    minecraft 'net.minecraftforge:forge:1.18.2-40.1.73'
    implementation fg.deobf("curse.maven:the-one-probe-245211:3671753")

    runtimeOnly fg.deobf("curse.maven:ferritecore-429235:3672146")
    runtimeOnly fg.deobf("curse.maven:lazy-dfu-forge-460819:3544496")
    runtimeOnly fg.deobf("curse.maven:shutup-experimental-settings-407174:3544525")

    compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api")
    runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}")

    //mekanism for compat testing
    implementation fg.deobf("curse.maven:mekanism-268560:3810540")

    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.18.2-71.1:api")
    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.18.2-71.1")

    runtimeOnly fg.deobf("curse.maven:nbt-tool-451553:3748971")
    //craft tweaker
    def ct = "com.blamejared.crafttweaker:CraftTweaker-forge-1.18.2:9.1.185"
    compileOnly(ct)
    runtimeOnly(fg.deobf(ct))

    //APs
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    annotationProcessor 'com.blamejared.crafttweaker:Crafttweaker_Annotation_Processors-1.18.2:2.0.0.124'
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "tothemoon",
                "Specification-Vendor"    : "khanhpham05",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "ttmsareus",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "TweakClass"              : "org.spongepowered.asm.launch.MixinTweaker",
                "TweakOrder"              : 0,
                "MixinConfigs"            : "ttm.mixin.json"
        ])
    }
}


jar.finalizedBy('reobfJar')

java { withSourcesJar() }